--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -2,8 +2,7 @@
     <h1>My First Bootstrap 5 Page</h1>
     <p>Resize this responsive page to see the effect!</p> 
   </div>
-  
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -19,5 +18,24 @@
           <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
+    </div>
+
+    <form class="d-flex input-group w-auto">
+      <input
+        type="search"
+        class="form-control rounded"
+        placeholder="Search"
+        aria-label="Search"
+        aria-describedby="search-addon"
+      />
+      <span class="input-group-text text-black border-0" id="search-addon">
+        <i class="fas fa-search"></i>
+      </span>
+    </form>
+  </nav>
+  <nav class="navbar navbar-dark bg-dark">
+    
+    <div class="container-fluid">
+      
     </div>
   </nav>
